fix: Improve contrast on audio button label

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer a:hover {
 .mp3 {
     background-color:#cecece;
     border-radius:6px;
-    color:#696969;
+    color:#3f3f3f;
     height:26px;
     margin-top:12px;
     position:relative;
